--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.5.0",
+		"prisma": "^4.15.0",
 		"svelte": "^3.54.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@prisma/client": "^4.15.0",
+		"marked": "^5.0.4"
+	}
 }
