--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.5.0",
-		"prisma": "^4.15.0",
 		"svelte": "^3.54.0",
-		"vite": "^4.2.0"
+		"svelte-check": "^3.0.1",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.3.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"@prisma/client": "^4.15.0",
-		"marked": "^5.0.4"
-	}
+	"type": "module"
 }
