--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^4.15.0",
-    "markdown-it": "^13.0.1"
+    "markdown-it": "^13.0.1",
+    "slugify": "^1.6.6"
   }
 }
