--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
-    "svelte": "^4.0.0",
-    "vite": "^4.3.6",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
+    "@sveltejs/kit": "^1.5.0",
     "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.23",
+    "postcss-load-config": "^4.0.1",
+    "prisma": "^4.15.0",
+    "svelte": "^3.54.0",
+    "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.3",
+    "tailwindcss": "^3.3.1",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^4.3.0"
   },
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "markdown-it": "^13.0.1",
-    "mongoose": "^7.3.1",
     "slugify": "^1.6.6"
   }
 }
