--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
-    "svelte": "^4.0.0",
-    "vite": "^4.3.6",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
-    "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.2"
+    "svelte": "^4.0.0",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.6"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "markdown-it": "^13.0.1",
+    "mongoose": "^7.3.1"
+  }
 }
