--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "type": "module",
   "dependencies": {
     "markdown-it": "^13.0.1",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "slugify": "^1.6.6"
   }
 }
