--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.3.6"
   },
   "type": "module",
   "dependencies": {
     "markdown-it": "^13.0.1",
     "mongoose": "^7.3.1",
+    "node-fetch": "^3.3.2",
     "slugify": "^1.6.6"
   }
 }
